# filehub-cli

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
src/: main.py
src/filehub/: __main__.py  cli.py  colors.py  downloader.py  errors.py  fzf.py  main.py  progress.py  utils.py
